--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,10 @@ ul li {
 
 .card::before {
     content: '';
-    @apply absolute top-0 left-0 w-[50%] bg-[#00FF1A] aspect-square rounded-full blur-[150px] opacity-20;
+    @apply -z-10 absolute top-0 left-0 w-[50%] bg-[#00FF1A] aspect-square rounded-full blur-[150px] opacity-20;
 }
 
 .card::after {
     content: '';
-    @apply absolute top-0 left-[50%] w-[50%] bg-[#00F0FF] aspect-square rounded-full blur-[150px] opacity-20;
+    @apply -z-10 absolute top-0 left-[50%] w-[50%] bg-[#00F0FF] aspect-square rounded-full blur-[150px] opacity-20;
 }
