--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,12 +27,12 @@ ul li {
 
 .card::before {
     content: '';
-    @apply -z-10 absolute top-0 left-0 w-[50%] bg-[#00FF1A] aspect-square rounded-full blur-[150px] opacity-20;
+    @apply -z-10 absolute top-0 left-0 w-[50%] bg-[#00FF1A] aspect-square rounded-full blur-[50px] md:blur-[150px] opacity-20;
 }
 
 .card::after {
     content: '';
-    @apply -z-10 absolute top-0 left-[50%] w-[50%] bg-[#00F0FF] aspect-square rounded-full blur-[150px] opacity-20;
+    @apply -z-10 absolute top-0 left-[50%] w-[50%] bg-[#00F0FF] aspect-square rounded-full blur-[50px] md:blur-[150px] opacity-20;
 }
 
 /* width */
